tests/negative/gold/if2-test.gold
tests/negative/if2-test.toit:7:7: error: Missing colon for 'else'
  else unresolved
      ^
tests/negative/if2-test.toit:7:8: error: Unresolved identifier: 'unresolved'
  else unresolved
       ^~~~~~~~~~
tests/negative/if2-test.toit:8:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
Compilation failed
